# sudoku-solver

./: .gitignore  LICENSE  README.md  go.mod  go.sum  pyproject.toml
backend/: main.py
backend/api/: routes.py
backend/cv/: cell_extractor.py  grid_detector.py  preprocessor.py
backend/models/: schemas.py
backend/ocr/: __init__.py  cnn_digit_reader.py  digit_reader.py  grid_repair.py  model_arch.py
backend/solver/: backtracking.py
data/: sudoku_label_sources.json  sudoku_labels.json
data/labels/: sudoku_label_sources.json  sudoku_labels.json
data/yolo_grid/: .gitignore  sudoku_grid.yaml
docs/: telemetry-report.md
frontend/: app.js  index.html  style.css
grafana/: sudoku-monitor-dashboard.json
models/: sudoku_digit_cnn_latest.onnx
notebooks/: training_dashboard.py
screen_monitor/: __init__.py  __main__.py  agent.py  confidence_painter.py  detector.py  frame_hasher.py  grid_tracker.py  hud_painter.py  otel.py  overlay.py  renderer.py  solver_pipeline.py  telemetry.py  types.py  visualize_cli.py
scripts/: _paths.py  augment_yolo_data.py  auto_label_yolo.py  benchmark_ocr.py  eval_cnn_ocr.py  export_cnn_onnx.py  screen_monitor.py  train_cnn_ocr.py  train_yolo_grid.py
server/: main.go
service/cvservice/: client.go  proto.go
sudoku/: backtracking.go  backtracking_test.go  validate.go  validate_test.go
tests/: __init__.py  test_cnn_ocr.py  test_cnn_ocr_regression.py  test_confidence_painter.py  test_cv.py  test_grid_repair.py  test_ocr.py  test_screen_monitor_logic.py  test_solver.py  test_startup.py  test_telemetry.py  test_train_metrics.py
(+25 files in other folders)
